fix: Fixed export script to include tsx

--- a/package.json
+++ b/package.json
@@ -24,8 +24,206 @@
     "typescript": "^5.8.3"
   },
   "exports": {
+    "./components/alerts/alert-banner": "./dist/components/alerts/alert-banner.js",
+    "./components/alerts/loading-spinner-2": "./dist/components/alerts/loading-spinner-2.js",
+    "./components/alerts/loading-spinner": "./dist/components/alerts/loading-spinner.js",
+    "./components/autocomplete": "./dist/components/autocomplete.js",
+    "./components/base-image": "./dist/components/base-image.js",
+    "./components/between-row": "./dist/components/between-row.js",
+    "./components/breadcrumb": "./dist/components/breadcrumb.js",
+    "./components/collapse-block": "./dist/components/collapse-block.js",
+    "./components/collapse-tree": "./dist/components/collapse-tree.js",
+    "./components/double-input-2": "./dist/components/double-input-2.js",
+    "./components/double-input": "./dist/components/double-input.js",
+    "./components/double-numerical-input": "./dist/components/double-numerical-input.js",
+    "./components/file-drop-panel": "./dist/components/file-drop-panel.js",
+    "./components/file-dropzone-panel": "./dist/components/file-dropzone-panel.js",
+    "./components/icons/animated-spinner": "./dist/components/icons/animated-spinner.js",
+    "./components/icons/app-icon": "./dist/components/icons/app-icon.js",
+    "./components/icons/arrow-left-right-icon": "./dist/components/icons/arrow-left-right-icon.js",
+    "./components/icons/arrow-right-arrow-left-icon": "./dist/components/icons/arrow-right-arrow-left-icon.js",
+    "./components/icons/arrow-rotate-right": "./dist/components/icons/arrow-rotate-right.js",
+    "./components/icons/arrow-up-wide-short": "./dist/components/icons/arrow-up-wide-short.js",
+    "./components/icons/bag-icon": "./dist/components/icons/bag-icon.js",
+    "./components/icons/box-whisker-chart-icon": "./dist/components/icons/box-whisker-chart-icon.js",
+    "./components/icons/breadcrumb-chevron": "./dist/components/icons/breadcrumb-chevron.js",
+    "./components/icons/cart-icon": "./dist/components/icons/cart-icon.js",
+    "./components/icons/chart-icon": "./dist/components/icons/chart-icon.js",
+    "./components/icons/check-icon": "./dist/components/icons/check-icon.js",
+    "./components/icons/chevron-right-icon": "./dist/components/icons/chevron-right-icon.js",
+    "./components/icons/chevron-up-down-icon": "./dist/components/icons/chevron-up-down-icon.js",
+    "./components/icons/circle-left-icon": "./dist/components/icons/circle-left-icon.js",
+    "./components/icons/circle-plus-icon": "./dist/components/icons/circle-plus-icon.js",
+    "./components/icons/clock-icon": "./dist/components/icons/clock-icon.js",
+    "./components/icons/clock-rotate-left-icon": "./dist/components/icons/clock-rotate-left-icon.js",
+    "./components/icons/close-icon": "./dist/components/icons/close-icon.js",
+    "./components/icons/compass-icon": "./dist/components/icons/compass-icon.js",
+    "./components/icons/computer": "./dist/components/icons/computer.js",
+    "./components/icons/cookie-icon": "./dist/components/icons/cookie-icon.js",
+    "./components/icons/cube-icon": "./dist/components/icons/cube-icon.js",
+    "./components/icons/data-sort-icon": "./dist/components/icons/data-sort-icon.js",
+    "./components/icons/database-icon": "./dist/components/icons/database-icon.js",
+    "./components/icons/delete-icon": "./dist/components/icons/delete-icon.js",
+    "./components/icons/dino-icon": "./dist/components/icons/dino-icon.js",
+    "./components/icons/download-icon": "./dist/components/icons/download-icon.js",
+    "./components/icons/ellipsis-icon": "./dist/components/icons/ellipsis-icon.js",
+    "./components/icons/error-icon": "./dist/components/icons/error-icon.js",
+    "./components/icons/export-icon": "./dist/components/icons/export-icon.js",
+    "./components/icons/external-link": "./dist/components/icons/external-link.js",
+    "./components/icons/favicon": "./dist/components/icons/favicon.js",
+    "./components/icons/file-icon": "./dist/components/icons/file-icon.js",
+    "./components/icons/file-image-icon": "./dist/components/icons/file-image-icon.js",
+    "./components/icons/file-lines-icon": "./dist/components/icons/file-lines-icon.js",
+    "./components/icons/filter-icon": "./dist/components/icons/filter-icon.js",
+    "./components/icons/folder-closed-icon": "./dist/components/icons/folder-closed-icon.js",
+    "./components/icons/folder-icon": "./dist/components/icons/folder-icon.js",
+    "./components/icons/folder-open-icon": "./dist/components/icons/folder-open-icon.js",
+    "./components/icons/gear-icon": "./dist/components/icons/gear-icon.js",
+    "./components/icons/grip-icon": "./dist/components/icons/grip-icon.js",
+    "./components/icons/hamburger-icon": "./dist/components/icons/hamburger-icon.js",
+    "./components/icons/heatmap-chart-icon": "./dist/components/icons/heatmap-chart-icon.js",
+    "./components/icons/height-icon": "./dist/components/icons/height-icon.js",
+    "./components/icons/help-icon": "./dist/components/icons/help-icon.js",
+    "./components/icons/home-icon": "./dist/components/icons/home-icon.js",
+    "./components/icons/image-icon": "./dist/components/icons/image-icon.js",
+    "./components/icons/index-arrow": "./dist/components/icons/index-arrow.js",
+    "./components/icons/info-icon": "./dist/components/icons/info-icon.js",
+    "./components/icons/label-icon": "./dist/components/icons/label-icon.js",
+    "./components/icons/layers-icon": "./dist/components/icons/layers-icon.js",
+    "./components/icons/line-chart-icon": "./dist/components/icons/line-chart-icon.js",
+    "./components/icons/link-icon": "./dist/components/icons/link-icon.js",
+    "./components/icons/list-icon": "./dist/components/icons/list-icon.js",
+    "./components/icons/minus-icon": "./dist/components/icons/minus-icon.js",
+    "./components/icons/moon-icon": "./dist/components/icons/moon-icon.js",
+    "./components/icons/multi-select-icon": "./dist/components/icons/multi-select-icon.js",
+    "./components/icons/open-icon": "./dist/components/icons/open-icon.js",
+    "./components/icons/options-icon": "./dist/components/icons/options-icon.js",
+    "./components/icons/pen-icon": "./dist/components/icons/pen-icon.js",
+    "./components/icons/play-icon": "./dist/components/icons/play-icon.js",
+    "./components/icons/plus-icon": "./dist/components/icons/plus-icon.js",
+    "./components/icons/redo-icon": "./dist/components/icons/redo-icon.js",
+    "./components/icons/reload-icon": "./dist/components/icons/reload-icon.js",
+    "./components/icons/right-side-icon": "./dist/components/icons/right-side-icon.js",
+    "./components/icons/save-icon": "./dist/components/icons/save-icon.js",
+    "./components/icons/search-icon": "./dist/components/icons/search-icon.js",
+    "./components/icons/settings-icon": "./dist/components/icons/settings-icon.js",
+    "./components/icons/side-bar-close-icon": "./dist/components/icons/side-bar-close-icon.js",
+    "./components/icons/side-bar-open-icon": "./dist/components/icons/side-bar-open-icon.js",
+    "./components/icons/sign-out-icon": "./dist/components/icons/sign-out-icon.js",
+    "./components/icons/sliders-icon": "./dist/components/icons/sliders-icon.js",
+    "./components/icons/small-vertical-grip-icon": "./dist/components/icons/small-vertical-grip-icon.js",
+    "./components/icons/sort-icon": "./dist/components/icons/sort-icon.js",
+    "./components/icons/split-icon": "./dist/components/icons/split-icon.js",
+    "./components/icons/square-plus-icon": "./dist/components/icons/square-plus-icon.js",
+    "./components/icons/sun": "./dist/components/icons/sun.js",
+    "./components/icons/table-icon": "./dist/components/icons/table-icon.js",
+    "./components/icons/tag-icon": "./dist/components/icons/tag-icon.js",
+    "./components/icons/transpose-icon": "./dist/components/icons/transpose-icon.js",
+    "./components/icons/trash-icon": "./dist/components/icons/trash-icon.js",
+    "./components/icons/triangle-right-icon": "./dist/components/icons/triangle-right-icon.js",
+    "./components/icons/undo-icon": "./dist/components/icons/undo-icon.js",
+    "./components/icons/unlink-icon": "./dist/components/icons/unlink-icon.js",
+    "./components/icons/upload-icon": "./dist/components/icons/upload-icon.js",
+    "./components/icons/user-icon": "./dist/components/icons/user-icon.js",
+    "./components/icons/vertical-grip-icon": "./dist/components/icons/vertical-grip-icon.js",
+    "./components/icons/warning-icon": "./dist/components/icons/warning-icon.js",
+    "./components/icons/working": "./dist/components/icons/working.js",
+    "./components/icons/zoom-in-icon": "./dist/components/icons/zoom-in-icon.js",
+    "./components/icons/zoom-out-icon": "./dist/components/icons/zoom-out-icon.js",
+    "./components/input-error": "./dist/components/input-error.js",
+    "./components/layout/base-col": "./dist/components/layout/base-col.js",
+    "./components/layout/base-grid": "./dist/components/layout/base-grid.js",
+    "./components/layout/base-row": "./dist/components/layout/base-row.js",
+    "./components/layout/center-col": "./dist/components/layout/center-col.js",
+    "./components/layout/center-row": "./dist/components/layout/center-row.js",
+    "./components/layout/content-div": "./dist/components/layout/content-div.js",
+    "./components/layout/h-center-col": "./dist/components/layout/h-center-col.js",
+    "./components/layout/h-center-row": "./dist/components/layout/h-center-row.js",
+    "./components/layout/stretch-row": "./dist/components/layout/stretch-row.js",
+    "./components/layout/v-center-col": "./dist/components/layout/v-center-col.js",
+    "./components/layout/v-center-row": "./dist/components/layout/v-center-row.js",
+    "./components/link/arrow-link": "./dist/components/link/arrow-link.js",
+    "./components/link/base-link": "./dist/components/link/base-link.js",
+    "./components/link/button-link": "./dist/components/link/button-link.js",
+    "./components/link/color-button-link": "./dist/components/link/color-button-link.js",
+    "./components/link/outline-button-link": "./dist/components/link/outline-button-link.js",
+    "./components/link/pill-button-link": "./dist/components/link/pill-button-link.js",
+    "./components/link/red-button-link": "./dist/components/link/red-button-link.js",
+    "./components/link/rounded-button-link": "./dist/components/link/rounded-button-link.js",
+    "./components/link/secondary-button-link": "./dist/components/link/secondary-button-link.js",
+    "./components/link/theme-index-link": "./dist/components/link/theme-index-link.js",
+    "./components/link/theme-link": "./dist/components/link/theme-link.js",
+    "./components/link/warning-button-link": "./dist/components/link/warning-button-link.js",
+    "./components/markdown-content": "./dist/components/markdown-content.js",
+    "./components/search-box": "./dist/components/search-box.js",
+    "./components/shadcn/ui/button": "./dist/components/shadcn/ui/button.js",
+    "./components/shadcn/ui/card": "./dist/components/shadcn/ui/card.js",
+    "./components/shadcn/ui/dialog": "./dist/components/shadcn/ui/dialog.js",
+    "./components/shadcn/ui/dropdown-menu": "./dist/components/shadcn/ui/dropdown-menu.js",
+    "./components/shadcn/ui/hover-card": "./dist/components/shadcn/ui/hover-card.js",
+    "./components/shadcn/ui/input": "./dist/components/shadcn/ui/input.js",
+    "./components/shadcn/ui/pagination": "./dist/components/shadcn/ui/pagination.js",
+    "./components/shadcn/ui/separator": "./dist/components/shadcn/ui/separator.js",
+    "./components/shadcn/ui/sheet": "./dist/components/shadcn/ui/sheet.js",
+    "./components/shadcn/ui/sidebar": "./dist/components/shadcn/ui/sidebar.js",
+    "./components/shadcn/ui/skeleton": "./dist/components/shadcn/ui/skeleton.js",
+    "./components/shadcn/ui/slider": "./dist/components/shadcn/ui/slider.js",
+    "./components/shadcn/ui/table": "./dist/components/shadcn/ui/table.js",
+    "./components/shadcn/ui/themed/accordion": "./dist/components/shadcn/ui/themed/accordion.js",
+    "./components/shadcn/ui/themed/button": "./dist/components/shadcn/ui/themed/button.js",
+    "./components/shadcn/ui/themed/card": "./dist/components/shadcn/ui/themed/card.js",
+    "./components/shadcn/ui/themed/check-box-small": "./dist/components/shadcn/ui/themed/check-box-small.js",
+    "./components/shadcn/ui/themed/check-box": "./dist/components/shadcn/ui/themed/check-box.js",
+    "./components/shadcn/ui/themed/collapsible": "./dist/components/shadcn/ui/themed/collapsible.js",
+    "./components/shadcn/ui/themed/command": "./dist/components/shadcn/ui/themed/command.js",
+    "./components/shadcn/ui/themed/crisp": "./dist/components/shadcn/ui/themed/crisp.js",
+    "./components/shadcn/ui/themed/dialog": "./dist/components/shadcn/ui/themed/dialog.js",
+    "./components/shadcn/ui/themed/dropdown-button": "./dist/components/shadcn/ui/themed/dropdown-button.js",
+    "./components/shadcn/ui/themed/dropdown-menu": "./dist/components/shadcn/ui/themed/dropdown-menu.js",
+    "./components/shadcn/ui/themed/form": "./dist/components/shadcn/ui/themed/form.js",
+    "./components/shadcn/ui/themed/glass": "./dist/components/shadcn/ui/themed/glass.js",
+    "./components/shadcn/ui/themed/hover-card": "./dist/components/shadcn/ui/themed/hover-card.js",
+    "./components/shadcn/ui/themed/icon-button": "./dist/components/shadcn/ui/themed/icon-button.js",
+    "./components/shadcn/ui/themed/input": "./dist/components/shadcn/ui/themed/input.js",
+    "./components/shadcn/ui/themed/input2": "./dist/components/shadcn/ui/themed/input2.js",
+    "./components/shadcn/ui/themed/input3": "./dist/components/shadcn/ui/themed/input3.js",
+    "./components/shadcn/ui/themed/input4": "./dist/components/shadcn/ui/themed/input4.js",
+    "./components/shadcn/ui/themed/input5": "./dist/components/shadcn/ui/themed/input5.js",
+    "./components/shadcn/ui/themed/label": "./dist/components/shadcn/ui/themed/label.js",
+    "./components/shadcn/ui/themed/link-button": "./dist/components/shadcn/ui/themed/link-button.js",
+    "./components/shadcn/ui/themed/numerical-input": "./dist/components/shadcn/ui/themed/numerical-input.js",
+    "./components/shadcn/ui/themed/pagination": "./dist/components/shadcn/ui/themed/pagination.js",
+    "./components/shadcn/ui/themed/popover": "./dist/components/shadcn/ui/themed/popover.js",
+    "./components/shadcn/ui/themed/radio-group": "./dist/components/shadcn/ui/themed/radio-group.js",
+    "./components/shadcn/ui/themed/resizable": "./dist/components/shadcn/ui/themed/resizable.js",
+    "./components/shadcn/ui/themed/select": "./dist/components/shadcn/ui/themed/select.js",
+    "./components/shadcn/ui/themed/sheet": "./dist/components/shadcn/ui/themed/sheet.js",
+    "./components/shadcn/ui/themed/side-toggle-group": "./dist/components/shadcn/ui/themed/side-toggle-group.js",
+    "./components/shadcn/ui/themed/slider": "./dist/components/shadcn/ui/themed/slider.js",
+    "./components/shadcn/ui/themed/small-switch": "./dist/components/shadcn/ui/themed/small-switch.js",
+    "./components/shadcn/ui/themed/switch": "./dist/components/shadcn/ui/themed/switch.js",
+    "./components/shadcn/ui/themed/table": "./dist/components/shadcn/ui/themed/table.js",
+    "./components/shadcn/ui/themed/tabs": "./dist/components/shadcn/ui/themed/tabs.js",
+    "./components/shadcn/ui/themed/textarea": "./dist/components/shadcn/ui/themed/textarea.js",
+    "./components/shadcn/ui/themed/textarea1": "./dist/components/shadcn/ui/themed/textarea1.js",
+    "./components/shadcn/ui/themed/toast": "./dist/components/shadcn/ui/themed/toast.js",
+    "./components/shadcn/ui/themed/toaster": "./dist/components/shadcn/ui/themed/toaster.js",
+    "./components/shadcn/ui/themed/toggle-group": "./dist/components/shadcn/ui/themed/toggle-group.js",
+    "./components/shadcn/ui/themed/toggle": "./dist/components/shadcn/ui/themed/toggle.js",
+    "./components/shadcn/ui/themed/tooltip": "./dist/components/shadcn/ui/themed/tooltip.js",
     "./components/shadcn/ui/themed/use-toast": "./dist/components/shadcn/ui/themed/use-toast.js",
+    "./components/shadcn/ui/tooltip": "./dist/components/shadcn/ui/tooltip.js",
     "./components/side": "./dist/components/side.js",
+    "./components/sortable-item": "./dist/components/sortable-item.js",
+    "./components/tabs/ios-tabs": "./dist/components/tabs/ios-tabs.js",
+    "./components/tabs/reorder-tabs": "./dist/components/tabs/reorder-tabs.js",
+    "./components/tabs/tab-content-panel": "./dist/components/tabs/tab-content-panel.js",
+    "./components/tabs/tab-indicator-h": "./dist/components/tabs/tab-indicator-h.js",
+    "./components/tabs/tab-indicator-provider": "./dist/components/tabs/tab-indicator-provider.js",
+    "./components/tabs/tab-indicator-v": "./dist/components/tabs/tab-indicator-v.js",
+    "./components/tabs/tab-provider": "./dist/components/tabs/tab-provider.js",
+    "./components/tabs/underline-tabs": "./dist/components/tabs/underline-tabs.js",
+    "./components/v-scroll-panel": "./dist/components/v-scroll-panel.js",
     "./consts": "./dist/consts.js",
     "./hooks/use-click-listener": "./dist/hooks/use-click-listener.js",
     "./hooks/use-keydown-listener": "./dist/hooks/use-keydown-listener.js",
@@ -101,6 +299,7 @@
     "./lib/dataframe/series": "./dist/lib/dataframe/series.js",
     "./lib/default-map": "./dist/lib/default-map.js",
     "./lib/dom-utils": "./dist/lib/dom-utils.js",
+    "./lib/download-utils": "./dist/lib/download-utils.js",
     "./lib/fill": "./dist/lib/fill.js",
     "./lib/hashmap": "./dist/lib/hashmap.js",
     "./lib/http/http-fetch": "./dist/lib/http/http-fetch.js",
@@ -150,6 +349,7 @@
     "./lib/math/zeros": "./dist/lib/math/zeros.js",
     "./lib/math/zscore": "./dist/lib/math/zscore.js",
     "./lib/path": "./dist/lib/path.js",
+    "./lib/react-table-utils": "./dist/lib/react-table-utils.js",
     "./lib/search": "./dist/lib/search.js",
     "./lib/shadcn-utils": "./dist/lib/shadcn-utils.js",
     "./lib/slice": "./dist/lib/slice.js",
