--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.19",
     "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
@@ -33,9 +34,23 @@
     "./components/breadcrumb": "./dist/components/breadcrumb.js",
     "./components/collapse-block": "./dist/components/collapse-block.js",
     "./components/collapse-tree": "./dist/components/collapse-tree.js",
+    "./components/color/color-dot-button": "./dist/components/color/color-dot-button.js",
+    "./components/color/color-dot": "./dist/components/color/color-dot.js",
+    "./components/color/color-picker-button": "./dist/components/color/color-picker-button.js",
+    "./components/dialog/base-glass-side-dialog": "./dist/components/dialog/base-glass-side-dialog.js",
+    "./components/dialog/basic-alert-dialog": "./dist/components/dialog/basic-alert-dialog.js",
+    "./components/dialog/check-prop-row": "./dist/components/dialog/check-prop-row.js",
+    "./components/dialog/glass-side-dialog": "./dist/components/dialog/glass-side-dialog.js",
+    "./components/dialog/numerical-prop-row": "./dist/components/dialog/numerical-prop-row.js",
+    "./components/dialog/ok-cancel-dialog": "./dist/components/dialog/ok-cancel-dialog.js",
+    "./components/dialog/prop-row": "./dist/components/dialog/prop-row.js",
+    "./components/dialog/switch-prop-row": "./dist/components/dialog/switch-prop-row.js",
+    "./components/dialog/text-prop-row": "./dist/components/dialog/text-prop-row.js",
+    "./components/dialog/textarea-prop-row": "./dist/components/dialog/textarea-prop-row.js",
     "./components/double-input-2": "./dist/components/double-input-2.js",
     "./components/double-input": "./dist/components/double-input.js",
     "./components/double-numerical-input": "./dist/components/double-numerical-input.js",
+    "./components/draggable-list/draggable-list-framer": "./dist/components/draggable-list/draggable-list-framer.js",
     "./components/file-drop-panel": "./dist/components/file-drop-panel.js",
     "./components/file-dropzone-panel": "./dist/components/file-dropzone-panel.js",
     "./components/icons/animated-spinner": "./dist/components/icons/animated-spinner.js",
@@ -214,7 +229,23 @@
     "./components/shadcn/ui/themed/use-toast": "./dist/components/shadcn/ui/themed/use-toast.js",
     "./components/shadcn/ui/tooltip": "./dist/components/shadcn/ui/tooltip.js",
     "./components/side": "./dist/components/side.js",
+    "./components/slide-bar/help-slide-bar": "./dist/components/slide-bar/help-slide-bar.js",
+    "./components/slide-bar/slide-bar-provider": "./dist/components/slide-bar/slide-bar-provider.js",
+    "./components/slide-bar/slide-bar": "./dist/components/slide-bar/slide-bar.js",
+    "./components/slide-bar/slide-state": "./dist/components/slide-bar/slide-state.js",
+    "./components/slide-bar/tab-slide-bar": "./dist/components/slide-bar/tab-slide-bar.js",
     "./components/sortable-item": "./dist/components/sortable-item.js",
+    "./components/split-pane/h-resize-handle": "./dist/components/split-pane/h-resize-handle.js",
+    "./components/split-pane/h-split-pane": "./dist/components/split-pane/h-split-pane.js",
+    "./components/split-pane/split-pane-context": "./dist/components/split-pane/split-pane-context.js",
+    "./components/split-pane/thin-h-resize-handle": "./dist/components/split-pane/thin-h-resize-handle.js",
+    "./components/split-pane/thin-v-resize-handle": "./dist/components/split-pane/thin-v-resize-handle.js",
+    "./components/split-pane/v-resize-handle": "./dist/components/split-pane/v-resize-handle.js",
+    "./components/split-pane/v-split-pane": "./dist/components/split-pane/v-split-pane.js",
+    "./components/table/dataframe-canvas": "./dist/components/table/dataframe-canvas.js",
+    "./components/table/dataframe-ui": "./dist/components/table/dataframe-ui.js",
+    "./components/table/tabbed-dataframes": "./dist/components/table/tabbed-dataframes.js",
+    "./components/table/virtualized-dataframe": "./dist/components/table/virtualized-dataframe.js",
     "./components/tabs/ios-tabs": "./dist/components/tabs/ios-tabs.js",
     "./components/tabs/reorder-tabs": "./dist/components/tabs/reorder-tabs.js",
     "./components/tabs/tab-content-panel": "./dist/components/tabs/tab-content-panel.js",
@@ -223,6 +254,32 @@
     "./components/tabs/tab-indicator-v": "./dist/components/tabs/tab-indicator-v.js",
     "./components/tabs/tab-provider": "./dist/components/tabs/tab-provider.js",
     "./components/tabs/underline-tabs": "./dist/components/tabs/underline-tabs.js",
+    "./components/toolbar/base-menu-button": "./dist/components/toolbar/base-menu-button.js",
+    "./components/toolbar/base-side-menu": "./dist/components/toolbar/base-side-menu.js",
+    "./components/toolbar/bottom-bar": "./dist/components/toolbar/bottom-bar.js",
+    "./components/toolbar/file-menu": "./dist/components/toolbar/file-menu.js",
+    "./components/toolbar/menu-button-link": "./dist/components/toolbar/menu-button-link.js",
+    "./components/toolbar/menu-button": "./dist/components/toolbar/menu-button.js",
+    "./components/toolbar/optional-dropdown-button": "./dist/components/toolbar/optional-dropdown-button.js",
+    "./components/toolbar/shortcuts": "./dist/components/toolbar/shortcuts.js",
+    "./components/toolbar/side-tabs": "./dist/components/toolbar/side-tabs.js",
+    "./components/toolbar/slider": "./dist/components/toolbar/slider.js",
+    "./components/toolbar/toolbar-button": "./dist/components/toolbar/toolbar-button.js",
+    "./components/toolbar/toolbar-dropdown-button": "./dist/components/toolbar/toolbar-dropdown-button.js",
+    "./components/toolbar/toolbar-footer-button": "./dist/components/toolbar/toolbar-footer-button.js",
+    "./components/toolbar/toolbar-footer-portal": "./dist/components/toolbar/toolbar-footer-portal.js",
+    "./components/toolbar/toolbar-footer": "./dist/components/toolbar/toolbar-footer.js",
+    "./components/toolbar/toolbar-icon-button": "./dist/components/toolbar/toolbar-icon-button.js",
+    "./components/toolbar/toolbar-open-files": "./dist/components/toolbar/toolbar-open-files.js",
+    "./components/toolbar/toolbar-optional-dropdown-button": "./dist/components/toolbar/toolbar-optional-dropdown-button.js",
+    "./components/toolbar/toolbar-save-svg": "./dist/components/toolbar/toolbar-save-svg.js",
+    "./components/toolbar/toolbar-separator": "./dist/components/toolbar/toolbar-separator.js",
+    "./components/toolbar/toolbar-tab-button": "./dist/components/toolbar/toolbar-tab-button.js",
+    "./components/toolbar/toolbar-tab-group": "./dist/components/toolbar/toolbar-tab-group.js",
+    "./components/toolbar/toolbar-tab-panel": "./dist/components/toolbar/toolbar-tab-panel.js",
+    "./components/toolbar/toolbar": "./dist/components/toolbar/toolbar.js",
+    "./components/toolbar/zoom-provider": "./dist/components/toolbar/zoom-provider.js",
+    "./components/toolbar/zoom-slider": "./dist/components/toolbar/zoom-slider.js",
     "./components/v-scroll-panel": "./dist/components/v-scroll-panel.js",
     "./consts": "./dist/consts.js",
     "./hooks/use-click-listener": "./dist/hooks/use-click-listener.js",
@@ -360,6 +417,13 @@
     "./lib/text/text": "./dist/lib/text/text.js",
     "./lib/trie": "./dist/lib/trie.js",
     "./lib/utils": "./dist/lib/utils.js",
+    "./providers/file-reducer": "./dist/providers/file-reducer.js",
+    "./providers/search-filter-provider": "./dist/providers/search-filter-provider.js",
+    "./providers/search-provider": "./dist/providers/search-provider.js",
+    "./providers/selection-range": "./dist/providers/selection-range.js",
+    "./stores/search-filter-store": "./dist/stores/search-filter-store.js",
+    "./stores/venn-circle-store": "./dist/stores/venn-circle-store.js",
+    "./stores/venn-store": "./dist/stores/venn-store.js",
     "./theme": "./dist/theme.js"
   },
   "dependencies": {
@@ -367,6 +431,8 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@nanostores/persistent": "github:nanostores/persistent",
+    "@nanostores/react": "github:nanostores/react",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-checkbox": "^1.3.1",
@@ -397,11 +463,15 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "gsap": "^3.13.0",
+    "immer": "^10.1.1",
     "jotai": "^2.12.4",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "nanoid": "^5.1.5",
+    "nanostores": "^1.0.1",
     "react": "^19.1.0",
+    "react-colorful": "^5.6.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
