fix: Bug fixes and updates.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@antonybholmes/theme-ui",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && ts-node scripts/generate-exports.ts",
+    "build": "tsc && tsc-alias && node scripts/generate-exports.mjs",
     "format": "prettier --plugin-search-dir=. --write \"src/**/*.{ts,tsx,js,mjs,svelte,astro}\""
   },
   "keywords": [],
@@ -22,6 +23,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.8.3"
   },
   "exports": {
@@ -56,7 +58,6 @@
     "./components/file-drop-panel": "./dist/components/file-drop-panel.js",
     "./components/file-dropzone-panel": "./dist/components/file-dropzone-panel.js",
     "./components/icons/animated-spinner": "./dist/components/icons/animated-spinner.js",
-    "./components/icons/app-icon": "./dist/components/icons/app-icon.js",
     "./components/icons/arrow-left-right-icon": "./dist/components/icons/arrow-left-right-icon.js",
     "./components/icons/arrow-right-arrow-left-icon": "./dist/components/icons/arrow-right-arrow-left-icon.js",
     "./components/icons/arrow-rotate-right": "./dist/components/icons/arrow-rotate-right.js",
@@ -87,7 +88,6 @@
     "./components/icons/error-icon": "./dist/components/icons/error-icon.js",
     "./components/icons/export-icon": "./dist/components/icons/export-icon.js",
     "./components/icons/external-link": "./dist/components/icons/external-link.js",
-    "./components/icons/favicon": "./dist/components/icons/favicon.js",
     "./components/icons/file-icon": "./dist/components/icons/file-icon.js",
     "./components/icons/file-image-icon": "./dist/components/icons/file-image-icon.js",
     "./components/icons/file-lines-icon": "./dist/components/icons/file-lines-icon.js",
@@ -172,6 +172,11 @@
     "./components/link/theme-link": "./dist/components/link/theme-link.js",
     "./components/link/warning-button-link": "./dist/components/link/warning-button-link.js",
     "./components/markdown-content": "./dist/components/markdown-content.js",
+    "./components/pagination-component": "./dist/components/pagination-component.js",
+    "./components/props-panel": "./dist/components/props-panel.js",
+    "./components/save-as-dialog": "./dist/components/save-as-dialog.js",
+    "./components/save-image-dialog": "./dist/components/save-image-dialog.js",
+    "./components/save-txt-dialog": "./dist/components/save-txt-dialog.js",
     "./components/search-box": "./dist/components/search-box.js",
     "./components/shadcn/ui/button": "./dist/components/shadcn/ui/button.js",
     "./components/shadcn/ui/card": "./dist/components/shadcn/ui/card.js",
@@ -256,6 +261,7 @@
     "./components/tabs/tab-indicator-v": "./dist/components/tabs/tab-indicator-v.js",
     "./components/tabs/tab-provider": "./dist/components/tabs/tab-provider.js",
     "./components/tabs/underline-tabs": "./dist/components/tabs/underline-tabs.js",
+    "./components/toggle-buttons": "./dist/components/toggle-buttons.js",
     "./components/toolbar/base-menu-button": "./dist/components/toolbar/base-menu-button.js",
     "./components/toolbar/base-side-menu": "./dist/components/toolbar/base-side-menu.js",
     "./components/toolbar/bottom-bar": "./dist/components/toolbar/bottom-bar.js",
